{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 233,
  "lineage": "df7ee533-a3cf-0904-6e32-ad9fcc83fc63",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00399ec92321828f5",
            "arn": "arn:aws:ec2:us-east-2:978322299160:instance/i-0a878868513a9f125",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a878868513a9f125",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "jump-server-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-018ab791fed4cb50b",
            "private_dns": "ip-172-31-26-224.us-east-2.compute.internal",
            "private_ip": "172.31.26.224",
            "public_dns": "ec2-18-218-82-228.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.82.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02d408fbb8949df52",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http_new",
              "allow_jenkins_new",
              "allow_ssh_new"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b2aff4c8",
            "tags": {
              "Name": "jenkins-mater"
            },
            "tags_all": {
              "Name": "jenkins-mater"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02a2d41fd40e4ac7b",
              "sg-032d24e79ce5bf969",
              "sg-0be0f53b11e7412d6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http_new",
            "aws_security_group.allow_jenkins_new",
            "aws_security_group.allow_ssh_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00399ec92321828f5",
            "arn": "arn:aws:ec2:us-east-2:978322299160:instance/i-0a4bf570292283e6f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4bf570292283e6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jump-server-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0777b96becfc19c1d",
            "private_dns": "ip-172-31-22-183.us-east-2.compute.internal",
            "private_ip": "172.31.22.183",
            "public_dns": "ec2-13-58-91-121.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.91.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06bfed35e3f972461",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http_new",
              "allow_jenkins_new",
              "allow_ssh_new"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b2aff4c8",
            "tags": {
              "Name": "jenkins-slave"
            },
            "tags_all": {
              "Name": "jenkins-slave"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02a2d41fd40e4ac7b",
              "sg-032d24e79ce5bf969",
              "sg-0be0f53b11e7412d6"
            ]
          },
          "dependencies": [
            "aws_instance.jenkins-instance1",
            "aws_security_group.allow_http_new",
            "aws_security_group.allow_jenkins_new",
            "aws_security_group.allow_ssh_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:978322299160:security-group/sg-02a2d41fd40e4ac7b",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a2d41fd40e4ac7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_new",
            "name_prefix": "",
            "owner_id": "978322299160",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-bbf134d0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_jenkins_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:978322299160:security-group/sg-032d24e79ce5bf969",
            "description": "Allow Jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032d24e79ce5bf969",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_jenkins_new",
            "name_prefix": "",
            "owner_id": "978322299160",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-bbf134d0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:978322299160:security-group/sg-0be0f53b11e7412d6",
            "description": "Allow ssh inbound traffic",
            "egress": [],
            "id": "sg-0be0f53b11e7412d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_new",
            "name_prefix": "",
            "owner_id": "978322299160",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-bbf134d0"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}